--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "material-design-icons": "^3.0.1",
-    "mongoose": "^5.3.8",
+    "mongoose": "^5.3.10",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
