Fixed button minor style changes, need to find way to solve server issue

--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@angular/router": "^6.1.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "http-errors": "^1.7.1",
     "material-design-icons": "^3.0.1",
     "mongoose": "^5.3.10",
+    "morgan": "^1.9.1",
     "rxjs": "~6.2.0",
+    "serve-favicon": "^2.5.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
